# anvil

./: CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: assessment.md  plan.md  status.md
src/: index.ts
src/cli/: index.ts
src/cli/commands/: doctor.ts  init.ts
src/detector/: build-system.ts  ci-provider.ts  index.ts  language.ts  linter.ts  package-manager.ts  test-framework.ts  types.ts
src/generator/: claude-md.ts  hooks.ts  index.ts  mcp-config.ts  slash-commands.ts
tests/fixtures/node-ts-project/: package-lock.json  package.json
tests/fixtures/poetry-project/: pyproject.toml
tests/fixtures/python-project/: pyproject.toml
tests/fixtures/setuptools-project/: requirements.txt  setup.cfg  setup.py
tests/integration/: doctor-command.test.ts  init-command.test.ts
tests/unit/detector/: build-system.test.ts  ci-provider.test.ts  index.test.ts  language.test.ts  linter.test.ts  package-manager.test.ts  test-framework.test.ts  types.test.ts
tests/unit/generator/: claude-md.test.ts  hooks.test.ts  mcp-config.test.ts  slash-commands.test.ts
