[tool.poetry]
name = "fixture-poetry"
version = "1.0.0"
description = "Test fixture for poetry project"

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
addopts = "-v"

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
